💡 Trash | 구글 시트 연결(에러 존재)

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
+# 보안 상 외부 노출이 불가능한 파일
+/[Ss]ecret/
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
